--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
     <title>Juan Miguel Zamora</title>
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <div class="top">
@@ -29,7 +33,7 @@
             <div class="text">
                 <h1>Welcome to my portfolio!</h1>
                 <h2> I am Juan Migue V. Zamora, a passionate front-end developer with a keen eye for design and a deep understanding of modern web technologies.</h1>
-                <br><a href="">Hire me</a>
+                <br><a href="#about">Hire me</a>
             </div>
             <img src="img.png">
         </div>
