--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <div class="top">
         <div id="home" class="home">
             <div class="logo">
-                <img src="logoport.png" height="120px">
+                <img src="logoport.png" >
             </div>
             <div class="hamburger">
                 <button id="menubar" onclick="showMenu()"><img src="burger-bar.svg" width="30px"></button>
@@ -23,6 +23,8 @@
             <header id="menu">
                 <div class="nav">
                     <a href="">Home</a>
+                    <a href="">Skills</a>
+                    <a href="">Langauges & Tools</a>
                     <a id="pro" href="#projects">Projects</a>
                     <a href="#about">About</a>
                     <button id="closebtn" onclick="hideMenu()">close</button>
@@ -32,41 +34,103 @@
         <div class="content">
             <div class="text">
                 <h1>Welcome to my portfolio!</h1>
-                <h2> I am Juan Migue V. Zamora, a passionate front-end developer with a keen eye for design and a deep understanding of modern web technologies.</h1>
-                <br><a href="#about">Hire me</a>
+                <h2> I am Juan Migue V. Zamora, a passionate mobile and web front-end developer with a keen eye for design and a deep understanding of modern web technologies.</h1>
+                <br><a href="#link">Contact me</a>
             </div>
-            <img src="img.png">
+            <img src="portfimg.jpg">
         </div>
         <div id="about" class="about">
             <h1>About</h1>
-            <h2>As a front-end developer, I thrive on transforming ideas into interactive and engaging web applications. My journey in web development has been fueled by my love for coding, creativity, and continuous learning. I stay updated with the latest trends and best practices in front-end development to ensure that my work is always at the cutting edge of technology.</h2>
-            <div class="link">
-                <a href="https://www.facebook.com/mi.gs.3720"><img src="icons8-facebook.svg"></a>
-                <a href="https://www.instagram.com/megsszs/?fbclid=IwZXh0bgNhZW0CMTAAAR1PsXPApI7l7buOhUu5SHVrU4JmglMMpxe_4TOQvDdPRP8p_E-G0kZkuBQ_aem_37eZaO_Qo0RIqCVoEOpqoA"><img src="icons8-instagram.svg"></a>
-                <a href=""><img src="icons8-gmail.svg"></a>
-                <a href="https://github.com/juanmiguelzamora"><img src="icons8-github.svg" height="48px"></a>
+            <h2>I am a junior student at PHINMA University of Pangasinan, eager to learn and adapt to the fast-paced IT industry. I specialize in mobile development and front-end web design, with knowledge in Java, HTML, CSS, and Python. I also work with tools like Canva and Figma to create engaging and user-friendly designs. I'm excited to further develop my skills and embrace new opportunities in technology.</h2>
+        </div>
+        <div class="tcs">
+            <div class="ts">
+                <h1>Technical Skills</h1><br>
+                <div class="cons">
+                    <div class="tscon">
+                        <img src="web1.svg">
+                        <h2>Web Developer</h2>
+                    </div>
+                    <div class="tscon">
+                        <img src="mob1.svg">
+                        <h2>Mobile Developer</h2>
+                    </div>
+                    <div class="tscon">
+                        <img src="uix1.svg">
+                        <h2>UI/UX Designer</h2>
+                </div>
             </div>
+            <div class="cs">
+                <h1>Core Work Skills</h1><br>
+                <div class="conc">
+                    <div class="csco">
+                        <h2>Leadership</h2>
+                    </div>
+                    <div class="csco">
+                        <h2>Teamwork Collaboration</h2>
+                    </div>
+                    <div class="csco">
+                        <h2>Flexibility &Agility</h2>
+                    </div>
+                    <div class="csco">
+                        <h2>Time Management</h2>
+                    </div>
+                </div>
         </div>
     </div>
     <div id="projects" class="projects">
         <h1>Projects</h1><br>
-        <div class="pcontent">
-            <a class="procont" href="https://juanmiguelzamora.github.io/TaskSceduler/welcome.html">
-                <img src="ts.png" width="400px"><br>
-                <label>Task Scheduler</label>
-                <h2>Task Scheduler is a web application designed to help users manage their tasks and schedules efficiently. The application allows users to create, edit, and delete tasks, set deadlines, and receive reminders.</h2>
-            </a>
-            <a class="procont" href="https://main--riesprintingservices.netlify.app/">
-                <img src="ries.png" width="400px"><br>
-                <label>Ries Printing Services</label>
-                <h2>Ries Printing Services is an online shop that provides customers with a comprehensive range of printing products and services. </h2>
-            </a>
-            <a class="procont" href="https://juanmiguelzamora.github.io/JcraftFind/home.html">
-                <img src="jcraftf.png" width="400px"><br>
-                <label>Jcraft Find</label>
-                <h2>JCraft Finds is an online platform dedicated to selling guitars and related accessories. </h2>
-            </a>
+        <div class="con">
+            <div class="pcontent">
+                <a class="procont" href="#">
+                    <img src="tbe.svg" width="400px"><br>
+                    <label>Text-based 911 Operator Game</label>
+                    <h2>The Text-based 911 Operator Game lets players act as a dispatcher, handling emergency calls and coordinating responses while testing decision-making under pressure.</h2>                </a>
+                <a class="procont" href="https://juanmiguelzamora.github.io/TaskSceduler/welcome.html">
+                    <img src="tsc.svg" width="400px"><br>
+                    <label>Task Scheduler</label>
+                    <h2>Task Scheduler is a web application designed to help users manage their tasks and schedules efficiently. The application allows users to create, edit, and delete tasks, set deadlines, and receive reminders.</h2>
+                </a>
+                <a class="procont" href="#">
+                    <img src="sdj.svg" width="400px"><br>
+                    <label>Super Ducky Jumper</label>
+                    <h2>Super Ducky Jumper is a mini game with stunning graphics and relaxing gameplay, perfect for casual gamers seeking an entertaining experience. </h2>
+                </a>
+                <a class="procont" href="#">
+                    <img src="tts.svg" width="400px"><br>
+                    <label>Tasty Trends</label>
+                    <h2>Tasty Trends is an online platform for food stalls at PHINMA UPANG's Student Plaza, allowing students to browse menus, order, and pay for meals from various vendors easily.</h2>
+                </a>
+                <a class="procont" href="#">
+                    <img src="ot3.svg" width="400px"><br>
+                    <label>Octavian</label>
+                    <h2>Octavian is a modern e-commerce platform designed to provide a seamless and stylish shopping experience. Customers can explore and purchase a wide range of shirts, t-shirts, and pants online with ease.</h2>
+                </a>
+            </div>
+        </div>
+        <h1>Other projects</h1><br>
+        <div class="con">
+            <div class="pcontent">
+                <a class="procont" href="https://main--riesprintingservices.netlify.app/">
+                    <img src="ries.png" width="400px"><br>
+                    <label>Ries Printing Services</label>
+                    <h2>Ries Printing Services is an online shop that provides customers with a comprehensive range of printing products and services. </h2>
+                </a>
+                <a class="procont" href="https://juanmiguelzamora.github.io/JcraftFind/home.html">
+                    <img src="jcraftf.png" width="400px"><br>
+                    <label>Jcraft Find</label>
+                    <h2>JCraft Finds is an online platform dedicated to selling guitars and related accessories. </h2>
+                </a>
+            </div>
         </div>
     </div>
+    <footer>
+        <div class="link" id="link">
+            <a href="https://www.facebook.com/mi.gs.3720"><img src="icons8-facebook.svg"></a>
+            <a href="https://www.instagram.com/megsszs/?fbclid=IwZXh0bgNhZW0CMTAAAR1PsXPApI7l7buOhUu5SHVrU4JmglMMpxe_4TOQvDdPRP8p_E-G0kZkuBQ_aem_37eZaO_Qo0RIqCVoEOpqoA"><img src="icons8-instagram.svg"></a>
+            <a href=""><img src="icons8-gmail.svg"></a>
+            <a href="https://github.com/juanmiguelzamora"><img src="icons8-github.svg" height="48px"></a>
+        </div>
+    </footer>
 </body>
 </html>
